ARM64: configs: onc: Set big & little CPU mask
Signed-off-by: TheSync <repo-sync@outlook.com>

--- a/arch/arm64/configs/onc-perf_defconfig
+++ b/arch/arm64/configs/onc-perf_defconfig
@@ -721,3 +721,5 @@ CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_SIMTRAY_STATUS=y
 CONFIG_BOOT_INFO=y
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=240
